# auctions_contracts

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  eslint.config.mjs  hardhat.config.cts  package-lock.json  package.json  tsconfig.evm.json  tsconfig.json  tsconfig.react-native.json  tsconfig.solana.json  tsconfig.test.json  tsconfig.unified.json
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
contracts/core/: AuctionRegistry.sol  AuctionRegistryStorage.sol
contracts/interfaces/: IAuctionEvents.sol  IAuctionRegistry.sol  IAuctionTypes.sol
contracts/libraries/: FeeLib.sol  TokenTransferLib.sol
contracts/test/mocks/: MockERC1155.sol  MockERC20.sol  MockERC721.sol
examples/: evm-usage.ts  solana-usage.ts
plans/: AUCTIONS.md  IMPROVEMENTS.md
programs/auctions/: Cargo.toml
programs/auctions/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/evm/: deploy.ts  upgrade.ts
scripts/solana/: deploy.ts
src/: index.ts
src/evm/: evm-auction-client.ts  index.ts
src/solana/: index.ts  solana-auction-client.ts  types.ts
src/types/: common.ts
src/unified/: index.ts  onchain-auction-client.ts
test/evm/: AuctionRegistry.test.ts
test/unified/: onchain-auction-client.test.ts
