[package]
name = "auctions"
version = "0.1.0"
description = "Multi-auction Solana program supporting Traditional, Dutch, and Penny auctions"
edition = "2021"
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))'
] }

[lib]
crate-type = ["cdylib", "lib"]
name = "auctions"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0", features = ["no-entrypoint"] }
# Use borsh 0.10 for compatibility with solana-program
borsh = "0.10"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.35", features = ["full"] }
